--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Automatically transform your border to retina hairline",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,15 @@
   "bugs": {
     "url": "https://github.com/ufologist/postcss-hairline/issues"
   },
-  "homepage": "https://github.com/ufologist/postcss-hairline#readme"
+  "homepage": "https://github.com/ufologist/postcss-hairline#readme",
+  "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "babel-jest": "^24.8.0",
+    "coveralls": "^3.0.3",
+    "jest": "^24.8.0"
+  },
+  "dependencies": {
+    "postcss": "^6.0.0"
+  }
 }
